@@ -23,9 +23,9 @@ typedef enum
 
 typedef enum
 {
-    APPLEIIKEYBOARD_NORMAL,
-    APPLEIIKEYBOARD_RESET,
-    APPLEIIKEYBOARD_RESTART,
+    APPLEIIKEYBOARD_STATE_NORMAL,
+    APPLEIIKEYBOARD_STATE_RESET,
+    APPLEIIKEYBOARD_STATE_RESTART,
 } AppleIIKeyboardState;
 
 class AppleIIKeyboard : public OEComponent
