@@ -1,4 +1,5 @@
 ==Ongoing==
+* Fixed JoystickMapper transformations
 * Implemented Apple II shift key mod
 * Added keyboard modifiers to the canvas interface
 * Implemented Apple II CTRL+BACKSPACE and CTRL+COMMAND+BACKSPACE
